--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ aiofiles = "^23.2.1"
 pdfminer-six = "^20231228"
 apscheduler = "^3.10.4"
 loguru = "^0.7.2"
+playwright = "^1.44.0"
 
 
 [tool.poetry.group.github.dependencies]
