--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ asyncpg = "^0.29.0"
 envyaml = "^1.10.211231"
 alembic = "^1.13.1"
 psycopg2 = "^2.9.9"
+ua-generator = "^0.5.0"
+python-pdfbox = "^0.1.8.1"
+pymupdf = "^1.24.7"
+python-dateutil = "^2.9.0.post0"
 
 
 [tool.poetry.group.github.dependencies]
